<?xml version="1.0" encoding="utf-8"?>


 <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layout_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/IP"
        android:textSize="20sp"
        android:layout_marginBottom="4dp"
        android:id="@+id/editTextIPAddress"/>

    <com.test.controller.GStreamerSurfaceView
        android:id="@+id/surface_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textview_message"
        android:layout_marginBottom="4dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/button_play"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/button_play" />

        <ImageButton
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/button_stop"
            android:src="@android:drawable/ic_media_pause"
            android:text="@string/button_stop" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dip">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:layout_height="40dp"
                android:layout_width="60dp"
                android:text="@string/Up"
                android:id="@+id/buttonUp"
                android:layout_marginRight="50dip"
                android:layout_marginLeft="50dip"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:layout_height="40dp"
                android:layout_width="60dp"
                android:text="@string/Left"
                android:id="@+id/buttonLeftTurn"/>
            <Button
                android:layout_height="40dp"
                android:layout_width="60dp"
                android:text="@string/Center"
                android:id="@+id/buttonCenter"/>
            <Button
                android:layout_height="40dp"
                android:layout_width="60dp"
                android:text="@string/Right"
                android:id="@+id/buttonRightTurn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDown"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:text="@string/Down" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>